--- a/layouts/shortcodes/button.html
+++ b/layouts/shortcodes/button.html
@@ -1,2 +1,4 @@
 <!-- layouts/shortcodes/button.html -->
-<button type="button">{{ .Get "label" }}</button>
+<button type="button">
+  {{ .Inner | safeHTML }}
+</button>
